# crag-scrub

./: .gitignore  README.md  pyproject.toml  read  run-gui.command
.github/workflows/: run-cragscrub.yml  scrape.yml
config/: europe.example.yml
src/cragscrub/: __init__.py  cli.py  gui.py  models.py  pipeline.py  web.py
src/cragscrub/sources/: __init__.py  base.py  thecrag.py  twentyseven_crags.py
